--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 #Ignore pycache
 __pycache__/
 
-#Ignore git folder
-.git/
+#Ignore large data files
+model_data/
+processed_batches/
+unprocessed_batches/
